--- a/react-router/package.json
+++ b/react-router/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gettin-started-and-concepts",
+  "name": "react-rutas",
   "version": "1.0.0",
   "description": "",
   "main": "main.js",
@@ -26,7 +26,8 @@
   },
   "dependencies": {
     "react": "^0.14.0",
-    "react-dom": "^0.14.0"
+    "react-dom": "^0.14.0",
+    "react-router": "^1.0.0-rc3"
   },
   "browserify": {
     "transform": [
