--- a/react-router/package.json
+++ b/react-router/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "history": "^1.12.5",
+    "lodash": "^3.10.1",
     "normalize.css": "^3.0.3",
     "react": "^0.14.0",
     "react-dom": "^0.14.0",
