--- a/react-router/package.json
+++ b/react-router/package.json
@@ -29,6 +29,7 @@
     "lodash": "^3.10.1",
     "normalize.css": "^3.0.3",
     "react": "^0.14.0",
+    "react-addons-linked-state-mixin": "^0.14.0",
     "react-dom": "^0.14.0",
     "react-router": "^1.0.0-rc3"
   },
